@@ -53,6 +53,7 @@
 #include "strrcpy.h"
 #include "memory.h"
 #include "output.h"
+#include "cfgparser.h"
 
 #ifdef C_LINUX
 dev_t procdev;
@@ -67,7 +68,9 @@ int scanmanager(const struct optstruct *opt)
 	struct passwd *user = NULL;
 	struct stat sb;
 	char *fullpath = NULL, cwd[200];
-
+	struct cfgstruct *copt, *cpt;
+	struct cl_cvd *d1, *d2;
+	const char *dbdir;
 
 /* njh@bandsman.co.uk: BeOS */
 #if !defined(C_CYGWIN) && !defined(C_BEOS)
@@ -79,13 +82,11 @@ int scanmanager(const struct optstruct *opt)
     }
 #endif
 
-
     if(optl(opt, "unzip") || optl(opt, "unrar") || optl(opt, "unace") ||
        optl(opt, "arj") || optl(opt, "unzoo") || optl(opt, "jar") ||
        optl(opt, "lha") || optl(opt, "tar") || optl(opt, "tgz") ||
        optl(opt, "deb"))
 	    compression = 1;
-
 
     /* now initialize the database */
 
@@ -110,10 +111,42 @@ int scanmanager(const struct optstruct *opt)
 	}
 
     } else {
-	if((ret = cl_loaddbdir(cl_retdbdir(), &trie, &claminfo.signs))) {
+	/* try to find fresh directory */
+	dbdir = cl_retdbdir();
+	if((copt = parsecfg(CONFDIR"/clamav.conf"))) {
+	    if((cpt = cfgopt(copt, "DatabaseDirectory")) || (cpt = cfgopt(copt, "DataDirectory"))) {
+		if(strcmp(cl_retdbdir(), cpt->strarg)) {
+			char *daily = (char *) mmalloc(strlen(cpt->strarg) + strlen(cl_retdbdir()) + 15);
+		    sprintf(daily, "%s/daily.cvd", cpt->strarg);
+		    if((d1 = cl_cvdhead(daily))) {
+			sprintf(daily, "%s/daily.cvd", cl_retdbdir());
+			if((d2 = cl_cvdhead(daily))) {
+			    free(daily);
+			    if(d1->version > d2->version)
+				dbdir = cpt->strarg;
+			    else
+				dbdir = cl_retdbdir();
+			    cl_cvdfree(d2);
+			} else {
+			    free(daily);
+			    dbdir = cpt->strarg;
+			}
+			cl_cvdfree(d1);
+		    } else {
+			free(daily);
+			dbdir = cl_retdbdir();
+		    }
+		}
+	    }
+	}
+
+	if((ret = cl_loaddbdir(dbdir, &trie, &claminfo.signs))) {
 	    mprintf("@%s\n", cl_strerror(ret));
 	    return 50;
 	}
+
+	if(copt)
+	    freecfg(copt);
     }
 
 
