@@ -4,8 +4,8 @@
 ## This file may be optionally merged with clamav.conf.
 ##
 
-
-# You can change the default database directory here.
+# It should match clamav.conf's directive ! (in most cases you shouldn't
+# change it)
 #DatabaseDirectory /var/lib/clamav
 
 # Path to the log file (make sure it has proper permissions)
