@@ -1,3 +1,9 @@
+Mon May 10 02:43:32 CEST 2004 (tk)
+----------------------------------
+  * clamscan, sigtool: compare clamav.conf's DatabaseDirectory against the
+		       hardcoded directory and select more fresh one (by
+		       checking version numbers of daily.cvd)
+
 Mon May 10 00:05:23 CEST 2004 (tk)
 ----------------------------------
   * clamscan: + allow regular expressions in --[in|ex]clude (patch by
